# OpenWebUI-Android-App

./: BUILD_GUIDE.md  BUILD_INSTRUCTIONS.md  BUILD_NOW.md  FINAL_RECOMMENDATION.md  GITHUB_ACTIONS_BUILD.md  INDEX.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  build.gradle  deploy_now.sh  local.properties  settings.gradle
.github/workflows/: build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  servo_wrapper.cpp
app/src/main/java/com/openwebui/app/: MainActivity.java  ServoView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
servo/: Cargo.toml
servo/src/: lib.rs
