[package]
name = "openwebui-servo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# JNI for Android
jni = "0.21"
log = "0.4"

# Servo dependencies - using embedder API
# Note: These are simplified - full Servo integration requires more
[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2"

# Servo embedder dependencies (when available)
# servo = { git = "https://github.com/servo/servo", branch = "master" }
# embedder = { git = "https://github.com/servo/embedder" }

[features]
default = []
# Enable Servo features when available
# servo = ["servo_embedding"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
